finish css in dashboard with light mode

--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -260,12 +260,11 @@ body.light-mode {
   height               : 100vh;
   padding              : 20px;
   background           : radial-gradient(circle, rgba(198, 21, 21, 0.245) 0%, #0c0b0b 65%);
-  transition           : background-color 0.3s ease;
   user-select          : none;
 }
 
 .light-mode .dashboard {
-  background-color: var(--color-white);
+  background: radial-gradient(circle, rgba(26, 85, 234, 0.245) 0%, #f3f2f2 35%);
 }
 
 /* Estilos para las tarjetas */
@@ -295,8 +294,13 @@ body.light-mode {
 }
 
 .light-mode .card-large {
-  background-color: var(--color-light-grey);
+  background-color: var(--color-light);
   color           : var(--color-black);
+  border          : 1px solid var(--color-light-grey);
+}
+
+.light-mode .card-large:hover {
+  border: 1px solid var(--color-dark);
 }
 
 
@@ -321,8 +325,8 @@ body.light-mode {
 }
 
 .light-mode .wifi-section {
-  background-color: var(--color-black);
-  color           : var(--color-white);
+  background-color: var(--color-white);
+  color           : var(--color-black);
 }
 
 .device-section {
@@ -345,8 +349,8 @@ body.light-mode {
 }
 
 .light-mode .device-section {
-  background-color: var(--color-black);
-  color           : var(--color-white);
+  background-color: var(--color-white);
+  color           : var(--color-black);
 }
 
 
@@ -363,8 +367,7 @@ body.light-mode {
 }
 
 .light-mode .text-network {
-  background-color: var(--color-black);
-  color           : var(--color-white);
+  color: var(--color-black);
 }
 
 .network {
@@ -399,8 +402,8 @@ body.light-mode {
 
 .light-mode .btn-primary {
   border          : 1px solid var(--color-light-grey);
-  background-color: var(--color-dark);
-  color           : var(--color-white);
+  background-color: var(--color-light);
+  color           : var(--color-black);
 }
 
 .btn-secondary {
@@ -417,8 +420,8 @@ body.light-mode {
 
 .light-mode .btn-secondary {
   border          : 1px solid var(--color-light-grey);
-  background-color: var(--color-dark);
-  color           : var(--color-white);
+  background-color: var(--color-light);
+  color           : var(--color-black);
 }
 
 
@@ -426,10 +429,9 @@ body.light-mode {
   border: 1px solid var(--color-light-grey);
 }
 
+
 .light-mode .btn-primary:hover {
-  background-color: var(--color-semiblack);
-  border          : 1px solid var(--color-light-grey);
-  color           : var(--color-white);
+  border: 1px solid var(--color-dark);
 }
 
 .btn-secondary:hover {
@@ -437,9 +439,7 @@ body.light-mode {
 }
 
 .light-mode .btn-secondary:hover {
-  background-color: var(--color-semiblack);
-  border          : 1px solid var(--color-light-grey);
-  color           : var(--color-white);
+  border: 1px solid var(--color-dark);
 }
 
 .arrow-icon {
@@ -573,8 +573,13 @@ body.light-mode {
 }
 
 .light-mode .card-top {
-  background-color: var(--color-black);
-  color           : var(--color-white);
+  background-color: var(--color-light);
+  color           : var(--color-black);
+  border          : 1px solid var(--color-light-grey);
+}
+
+.light-mode .card-top:hover {
+  border: 1px solid var(--color-dark);
 }
 
 .text {
@@ -659,7 +664,12 @@ body.light-mode {
 }
 
 .light-mode .card-bottom-right {
-  background-color: var(--color-quaternary);
+  background-color: var(--color-light);
+  border          : 1px solid var(--color-light-grey);
+}
+
+.light-mode .card-bottom-right:hover {
+  border: 1px solid var(--color-dark);
 }
 
 .text-information {
@@ -673,8 +683,7 @@ body.light-mode {
 }
 
 .light-mode .text-information {
-  background-color: var(--color-light);
-  color           : var(--color-black);
+  color: var(--color-black);
 }
 
 
@@ -715,7 +724,7 @@ body.light-mode {
 }
 
 .light-mode .configuration {
-  background-color: var(--color-light);
+  background-color: var(--color-white);
   color           : var(--color-black);
 }
 
@@ -737,8 +746,8 @@ body.light-mode {
 
 .light-mode .configuration strong,
 .last-network strong {
-  color           : var(--color-white);
-  background-color: var(--color-black);
+  color           : var(--color-black);
+  background-color: var(--color-light-grey);
 }
 
 .configuration strong:hover {
@@ -762,7 +771,7 @@ body.light-mode {
 }
 
 .light-mode .last-network {
-  background-color: var(--color-light);
+  background-color: var(--color-white);
   color           : var(--color-black);
 }
 
@@ -820,7 +829,7 @@ body.light-mode {
 }
 
 .light-mode .alerts {
-  background-color: var(--color-light);
+  background-color: var(--color-white);
   color           : var(--color-black);
 }
 
