--- a/app/Views/modules/home/views/navbar.html
+++ b/app/Views/modules/home/views/navbar.html
@@ -48,14 +48,14 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="<?= base_url('logout'); ?>" class="signup link">Log Out</a>
+                <a href="<?= base_url('auth/logout'); ?>" class="signup link">Log Out</a>
             </li>
         <?php else : ?>
             <li class="nav-item">
-                <a href="<?= base_url('login-animation'); ?>" class="login link">Log In</a>
+                <a href="<?= base_url('auth/animation'); ?>" class="login link">Log In</a>
             </li>
             <li class="nav-item signup">
-                <a href="<?= base_url('signup-animation'); ?>" class="signup link">Get Started <span class="arrow">↗</span></a>
+                <a href="<?= base_url('auth/s-animation'); ?>" class="signup link">Get Started <span class="arrow">↗</span></a>
             </li>
         <?php endif; ?>
     </ul>
