implemented dashboard modules

--- a/app/Views/modules/auth/views/sign-up/header.html
+++ b/app/Views/modules/auth/views/sign-up/header.html
@@ -23,4 +23,6 @@
     <a href="#" id="toggle-dark-mode"><i class="fa-solid fa-moon" id="mode-icon"></i></a>
     <div id="particles-js"></div>
 
-  
+    <?php if (session()->getFlashdata('error')) : ?>
+    <div class="message error"><?= session()->getFlashdata('error'); ?></div>
+  <?php endif; ?>
