--- a/app/Views/modules/auth/views/sign-up/index.html
+++ b/app/Views/modules/auth/views/sign-up/index.html
@@ -1,5 +1,5 @@
 <!-- modules section starts here -->
 <?= $this->include('modules/auth/views/sign-up/header.html'); ?>
-<?= $this->include('modules/auth/views/sign-up/signup.html'); ?>
+<?= $this->include('modules/auth/views/sign-up/signup.php'); ?>
 <?= $this->include('modules/auth/views/sign-up/closing.html'); ?>
 <!-- modules section ends here -->
