--- a/app/Views/modules/home/views/faq.html
+++ b/app/Views/modules/home/views/faq.html
@@ -13,9 +13,13 @@
               </div>
               <div class="faq-answer">
                   <p>
-                      To <span>perform a scan</span>, you just need to be logged into our software, go to your profile in the
-                      <span>Network Scan</span> section, and ensure your <span>Raspberry Pi</span> is properly configured.
-                  </p>
+                    After logging in, go to the <span>Settings</span>section.
+                    In Functionalities, complete the <span>Credentials</span> and <span>IP</span>span forms. Turn on the <span>API</span>, enable<span>Monitor Mode</span>, and select the <span>scan mode</span> (Quick, Intermediate, or Deep).
+                <span>Quick Scan:</span> Detects only basic services; it does not detect vulnerabilities or the operating system version.
+                <span>Intermediate:</span> Detects the operating system version and more specific services but no vulnerabilities.
+                <span>Deep:</span> Detects vulnerabilities, services, and the operating system. 
+                </span> ensure your <span>Raspberry Pi</span> is properly configured.
+                  </p>  
               </div>
           </div>
       </div>
@@ -89,3 +93,4 @@
           </div>
       </div>
   </section>
+
