--- a/app/Views/modules/user/views/history/header.html
+++ b/app/Views/modules/user/views/history/header.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- CSS -->
+    <link rel="stylesheet" href="<?php echo base_url('assets/css/user/index.css'); ?>">
     <link rel="stylesheet" href="<?php echo base_url('assets/css/user/history.css'); ?>">
     <title>| History |</title>
 </head>
