--- a/public/assets/css/user/index.css
+++ b/public/assets/css/user/index.css
@@ -28,27 +28,17 @@
     src: url("../../fonts/neue/NeueMontreal-Medium.otf") format("truetype");
 }
 
+/* Reset and base styles */
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-}
-
-.cursor {
-    pointer-events: none;
-    position: absolute;
-    padding: 0.3vw;
-    border-radius: 50%;
-    z-index: 9000;
-    transition: transform 0.1s ease, width 0.3s ease, height 0.3s ease, background-color 0.5s ease;
-    background-color: var(--color-semigrey);
+    box-sizing: border-box;
+    font-family: "neue", Arial, sans-serif;
 }
 
 body {
     display: flex;
     height: 100vh;
-    overflow: hidden;
     background-color: var(--color-dark);
     color: var(--color-white);
     transition: background-color 0.3s ease;
